--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "projeto-repositorios",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://diegofrr.github.io/projeto-repositorios/main",
+  "homepage": "https://diegofrr.github.io/projeto-repositorios",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
